--- a/ABOUT.HTM
+++ b/ABOUT.HTM
@@ -141,13 +141,51 @@ echo "Evaluated in $delta ms.\n";<br>
 <br>
 <li>
   <code><strong>java_context()</strong></code>: Makes the <code>javax.script.ScriptContext</code>
-     available to the current script. All implicit web objects (session, servlet context, etc.) are <a href="server/documentation/API/php/java/servlet/Context.html#getHttpServletRequest()">available from the context</a>, when the backend is running in a servlet engine or application server. The following example uses the jdk1.6 <code>jrunscript</code> to eval php statements interactively:  <br><br>
+     available to the current script. All implicit web objects (session, servlet context, etc.) are <a href="server/documentation/API/php/java/servlet/Context.html#getHttpServletRequest()">available from the context</a>, when the backend is running in a servlet engine or application server. The following example uses the jdk1.6 <a href="http://java.sun.com/javase/6/docs/tooldocs/share/jrunscript.html"><code>jrunscript</code></a> to eval php statements interactively:  <br><br>
 <blockquote>
 <code>
 /opt/jdk1.6/bin/jrunscript -l php-intractive<br>
 php-interactive&gt; echo java_context()->getAttribute("javax.script.name"); <br>
 =&gt; STDIN <br>
 <br>
+</code>
+</blockquote>
+<br>
+<li>
+  <code><strong>java_values</strong>(JAVA_OBJECT)</code>: Fetches the values for <code>JAVA_OBJECT</code>, if possible. Examples:<br><br><blockquote>
+<code>
+$str = new java("java.lang.String", "hello");
+echo $str;<br>
+=&gt; [o(String):"hello"]<br>
+<br>
+// fetch the php string from the java string<br>
+echo (java_values($str));<br>
+=&gt; hello<br>
+<br>
+// fetch the values of the java char array<br>
+print_r (java_values($str->toCharArray()));<br>
+=&gt; array('h', 'e', 'l', 'l', 'o')<br>
+<br>
+// no php type exists for java.lang.Object<br>
+print (java_values(new java("java.lang.Object")));<br>
+=&gt; [o(Object):"java.lang.Object@4a85fc"]
+</code>
+</blockquote>
+<br>
+<li>
+  <code><strong>java_begin_document</strong>()</code> and <code><strong>java_end_document</strong>()</code>: Enables/disables XML stream mode. In XML stream mode the PHP/Java Bridge XML statements are sent in one XML stream. Compared with SOAP, which usually creates the entire XML document before sending it, this mode uses much less resources on the web-server side. Raised server-side exceptions are reported when <code>java_end_document()</code> is invoked. Example:<br><br><blockquote>
+<code>
+// send the following XML statements in one stream<br>
+java_begin_document();<br>
+for ($x = 0; $x < $dx; $x++) {<br>
+&nbsp;&nbsp;$row = $sheet->createRow($x);<br>
+&nbsp;&nbsp;for ($y = 0; $y < $dy; $y++) {<br>
+&nbsp;&nbsp;&nbsp;&nbsp;$cell = $row->createCell($y);<br>
+&nbsp;&nbsp;&nbsp;&nbsp;$cell->setCellValue("$x . $y");<br>
+&nbsp;&nbsp;&nbsp;&nbsp;$cell->setCellStyle($style);<br>
+&nbsp;&nbsp;}<br>
+}<br>
+java_end_document(); // back to synchronous mode<br>
 </code>
 </blockquote>
 <br>
@@ -533,11 +571,11 @@ If you run a 64bit system <em>and</em> a 64bit JVM, you need to build a  64bit R
 <p>
 <blockquote>
 <code>
-rpmbuild rpmbuild --rebuild php-java-bridge-x.y.z-1.src.rpm<br>
+rpmbuild --rebuild php-java-bridge-x.y.z-1.src.rpm<br>
 </code>
 </blockquote>
 </p>
-If you have installed the development RPM, you can run PHP scripts interactively, either from your Eclipse IDE or with the command:
+If you have installed the development RPM, you can run PHP scripts interactively, either from your Eclipse IDE (when available) or with the <a href="http://java.sun.com/javase/6/docs/tooldocs/share/jrunscript.html"><code>jrunscript</code></a> command:
 <p>
 <blockquote>
 <code>
@@ -1101,36 +1139,6 @@ OutOfMemory conditions can be debugged by running the backend with e.g.:<br><br>
 <code>
 java -agentlib:hprof=heap=sites -jar JavaBridge.jar<br>
 </code>
-</p>
-
-<li> <H4>How do I retrieve the values from a java object?</H4>
-<p>
-With <code>java_values()</code> or with <code>settype</code>. Examples:
-</p>
-<p>
-<code>
-$str = new java("java.lang.String", "hello");
-echo $str;<br>
-=&gt; [o(String):"hello"]<br>
-<br>
-echo (java_values($str));<br>
-=&gt; hello<br><br>
-<br>
-print_r (java_values($str->toCharArray()));<br>
-=&gt; array('h', 'e', 'l', 'l', 'o')<br>
-<br>
-settype($str, "string");
-echo $str;<br>
-=&gt; hello<br>
-<br>
-$vector = new java("java.util.Vector", array("foo"=>1,"bar"=>2));<br>
-settype($vector, "array");
-print_r ($vector);<br>
-=&gt; array(foo=>1, bar=>2)<br>
-<br>
-settype($vector, "object");
-echo $vector->bar;<br>
-=&gt; 2<br>
 </p>
 </ul>
 
